8212184: Incorrect oop ref strength used for referents in FinalReference

Reviewed-by: eosterlund, kbarrett